taiwan_signals_output_202601151315.txt
====================================================================================================
批量运行所有台股交易信号生成器
====================================================================================================
生成时间: 2026-01-15 13:15:37
总共 62 个台股
====================================================================================================

进度: [1/62]

====================================================================================================
运行: 1101 台泥
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_1101.py", line 662
    print(f"   {get_model_accuracy_display('1101.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [2/62]

====================================================================================================
运行: 1303 南亞
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_1303.py", line 662
    print(f"   {get_model_accuracy_display('1303.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [3/62]

====================================================================================================
运行: 1519 台股
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_1519.py", line 694
    print(f"   {get_model_accuracy_display('1519.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [4/62]

====================================================================================================
运行: 1605 華新
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_1605.py", line 662
    print(f"   {get_model_accuracy_display('1605.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [5/62]

====================================================================================================
运行: 2303 聯電
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2303.py", line 662
    print(f"   {get_model_accuracy_display('2303.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [6/62]

====================================================================================================
运行: 2308 台達電
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2308.py", line 694
    print(f"   {get_model_accuracy_display('2308.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [7/62]

====================================================================================================
运行: 2313 華通
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2313.py", line 662
    print(f"   {get_model_accuracy_display('2313.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [8/62]

====================================================================================================
运行: 2317 鴻海
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2317.py", line 694
    print(f"   {get_model_accuracy_display('2317.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [9/62]

====================================================================================================
运行: 2327 國巨
====================================================================================================
